# plumeapp

./: .gitignore  CMakeLists.txt  README.md
include/: App.hpp  Frame.hpp  MainFrame.hpp
src/: App.cpp  Frame.cpp  main.cpp
src/view/: MainFrame.cpp
